--- a/src/Belletrix.Web/packages.config
+++ b/src/Belletrix.Web/packages.config
@@ -8,7 +8,7 @@
   <package id="Bootstrap.Multiselect" version="0.9.13" targetFramework="net45" />
   <package id="bootstrap.TypeScript.DefinitelyTyped" version="0.9.2" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
-  <package id="Dapper" version="1.50.2" targetFramework="net45" requireReinstallation="true" />
+  <package id="Dapper" version="1.50.2" targetFramework="net451" />
   <package id="DropDownList.Optgroup.MVC" version="1.0.0" targetFramework="net45" />
   <package id="jQuery" version="2.2.4" targetFramework="net45" />
   <package id="jquery.TypeScript.DefinitelyTyped" version="3.1.0" targetFramework="net45" />
