--- a/src/Belletrix.Entity/Belletrix.Entity.csproj
+++ b/src/Belletrix.Entity/Belletrix.Entity.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Model\ActivityLogModel.cs" />
     <Compile Include="Model\ActivityLogParticipantModel.cs" />
     <Compile Include="Model\ActivityLogPersonModel.cs" />
+    <Compile Include="Model\UserPromoModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\ActivityLogViewModels.cs" />
     <Compile Include="ViewModel\AddUserViewModel.cs" />
